--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Event Driven Programming</h1>
-    <h3>By: Ray Ivan Sarigumba</h3>
+    <h3>by: Ray Sarigumba</h3>
+    <h4>I DO NOT KNOW WHAT TO DO</h4>
 </body>
 </html>
