--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Event-Driven</title>
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
     <h1>Event Driven Programming</h1>
     <h3>by: Ray Sarigumba</h3>
     <h4>I DO NOT KNOW WHAT TO DO</h4>
+
+    <script type="text/javascript" src="/js/my.js"></script>
 </body>
 </html>
