--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
-    <h1>Event Driven Programming</h1>
+    <h1 ondblclick="tot()">Event Driven Programming</h1>
     <h3>by: Ray Sarigumba</h3>
     <h4>I DO NOT KNOW WHAT TO DO</h4>
-
+    <p>These are basic html tags that are required by our prof.</p>
     <script type="text/javascript" src="/js/my.js"></script>
 </body>
 </html>
