--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h1 ondblclick="tot()">Event Driven Programming</h1>
     <h3>by: Ray Sarigumba</h3>
     <h4>I DO NOT KNOW WHAT TO DO</h4>
+    <h4>THIS HAS A CHANGED BRANCH NAME</h4>
     <p>These are basic html tags that are required by our prof.</p>
     <script type="text/javascript" src="/js/my.js"></script>
 </body>
