--- a/about.html
+++ b/about.html
@@ -6,6 +6,10 @@
     <title>ABOUT US PAGE</title>
 </head>
 <body>
-    
+    <h1>INTRODUCTION</h1>
+    <p>Who are we?</p>
+    <p>What is our purpose?</p>
+    <p>Phone Number: 1234567890</p>
+    <p>Email: unknown@Email.com</p>
 </body>
 </html>
