--- a/about.html
+++ b/about.html
@@ -11,5 +11,6 @@
     <p>What is our purpose?</p>
     <p>Phone Number: 1234567890</p>
     <p>Email: unknown@Email.com</p>
+    <script type="text/javascript" src="/js/my.js"></script>
 </body>
 </html>
