--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h3>by: Ray Sarigumba</h3>
     <h4>I DO NOT KNOW WHAT TO DO</h4>
     <p>These are basic html tags that are required by our prof.</p>
+    <a href="about.html"><p>CLICK TO GO TO ABOUT US PAGE</p></a>
     <script type="text/javascript" src="/js/my.js"></script>
 </body>
 </html>
