--- a/index.html
+++ b/index.html
@@ -3,16 +3,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Event-Driven</title>
+    <title>PA-2</title>
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
-    <h1 ondblclick="tot()">Event Driven Programming</h1>
-    <h3>by: Ray Sarigumba</h3>
-    <h4>I DO NOT KNOW WHAT TO DO</h4>
-    <p>These are basic html tags that are required by our prof.</p>
-    <p>THIS IS NOT FINAL</p>
-    <a href="about.html"><p>CLICK TO GO TO ABOUT US PAGE</p></a>
-    <script type="text/javascript" src="/js/my.js"></script>
+    <h1 id="main"></h1>
+    <table>
+        <thead>
+            <tr id="section">
+                <th id="month_name" colspan="7"></th>
+            </tr>
+            <tr>
+                <th class="s" style="background-color:rgb(228, 33, 65);">Sun</th>
+                <th class="s">Mon</th>
+                <th class="s">Tue</th>
+                <th class="s">Wed</th>
+                <th class="s">Thu</th>
+                <th class="s">Fri</th>
+                <th class="s">Sat</th>
+            </tr>
+        </thead>
+        <tbody id="content">
+
+        </tbody>
+    </table>
 </body>
+<script type="text/javascript" src="/js/my.js"> </script>
 </html>
