--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <th class="s">Wed</th>
                 <th class="s">Thu</th>
                 <th class="s">Fri</th>
-                <th class="s">Sat</th>
+                <th>Sat</th>
             </tr>
         </thead>
         <tbody id="content">
