--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <form action="">
-        <input type="number" id="subtotal" name="subtotal" placeholder="Subtotal">
+        <input type="number" id="subtotal" name="subtotal" placeholder="Subtotal" step="10">
         <label for="subtotal">User Input from 100 to 10,000</label></br></br>
 
         <input type="text" id="tax" name="tax" placeholder="Tax" disabled="true">
@@ -22,7 +22,7 @@
 
         <input type="text" id="change" name="change" placeholder="Change" disabled="true">
         <label for="change">Amount Paid - Total</label></br></br>
-        
+
         <button type="submit" id="submit" disabled="true">Pay</button>
     </form>
     <script type="text/javascript" src="/js/my.js"></script>
