--- a/main.html
+++ b/main.html
@@ -5,26 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
 </head>
-<body>
-    <form action="">
-        <input type="number" id="subtotal" name="subtotal" placeholder="Subtotal" step="10">
-        <label for="subtotal">User Input from 100 to 10,000</label></br></br>
-
-        <input type="text" id="tax" name="tax" placeholder="Tax" disabled="true">
-        <label for="tax">+12% Tax</label></br></br>
-
-        <input type="text" id="total" name="total" placeholder="Total" disabled="true">
-        <label for="total">Subtotal + Tax</label></br></br>
-
-        <input type="number" id="amountPaid" name="amountPaid" placeholder="Amount Paid" disabled="true">
-        <label for="amountPaid">Minimum is based on Subtotal+Tax</label></br></br>
-
-        <input type="text" id="change" name="change" placeholder="Change" disabled="true">
-        <label for="change">Amount Paid - Total</label></br></br>
-
-        <button type="submit" id="submit" disabled="true">Pay</button>
-    </form>
-    <script type="text/javascript" src="/js/my.js"></script>
+<body style="background-color: cornflowerblue;">
+    <div style="color: rgba(255, 255, 255, 0.521);" class="center">
+        <div style="color: white;"><h1 style="font-size: 50px; margin-bottom: 50px; text-align: center;">Sarigumba</h1></div>
+        <div class="media">
+            <div><a id='ghub' href="https://github.com/raysarigumba/edriven2020"><i  class="fa fa-github" aria-hidden="true"></i></a></div>
+        </div>
+        <div class="button"><a href="/other.html"><button class="buttonn">JOIN</button></a></div>
+    </div>
+    
 </body>
 </html>
