--- a/other.html
+++ b/other.html
@@ -18,9 +18,9 @@
         <button type="button" style="float: left;" class="btn btn-primary mb-2"  data-bs-toggle="modal" data-bs-target="#nCustomer";>
             New +</button>
   
-            <div class="modal fade" id="nCustomer" style="padding-top: 130px; padding-right: 500px;" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="nCustomerLabel" aria-hidden="true">
+            <div class="modal fade" id="nCustomer" style="padding-top: 130px; padding-right: 300px;" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="nCustomerLabel" aria-hidden="true">
                 <div class="modal-dialog">
-                  <div class="modal-content" style="width: 1000px">
+                  <div class="modal-content" style="width: 800px">
                     <div class="modal-header">
                       <h5 class="modal-title" id="newLabel">New Order</h5>
                       <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -102,10 +102,10 @@
               </div>
                   
   
-      <table class="table table" id="dTable" style="background-color: gray; color: white;">
+      <table class="table table" id="dTable" style="background-color: rgb(78, 103, 110); color: white;">
                 <tr class="tableItems" style="color: white; background-color: #2a92df;" >
-                    <th scope="row" class="text-center">#</th>
-                    <th scope="row" class="text-center">Order #</th>
+                    <th scope="row" class="text-center">No.</th>
+                    <th scope="row" class="text-center">Order Number</th>
                     <th scope="row" class="text-center">Customer Name</th>
                     <th scope="row" class="text-center">Total</th>
                     <th scope="row" class="text-center">Actions</th>
@@ -114,7 +114,7 @@
 
         <div class="modal fade" id="viewItem" tabindex="-1" aria-labelledby="viewItemLabel" aria-hidden="true" style="padding-right: 500px;">
             <div class="modal-dialog">
-              <div class="modal-content" style="width: 1000px; background-color: #232123">
+              <div class="modal-content" style="width: 1000px; background-color: #6298a7">
                 <div class="modal-header">
                   <h5 class="modal-title" id="viewItemLabel" style="color: white;">View Order</h5>
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -128,7 +128,7 @@
 
           <div class="modal-body">
             <hr>
-              <h3 style="color: white;">Items</h3>
+              <h3 style="color: rgb(41, 39, 39);">Items</h3>
               <div class="container">
                 <div class="row" id="viewItemBody" style="width: 100%; justify-content: space-around; align-items: center; display: flex;">
                                       
@@ -146,9 +146,9 @@
       </div>
   
     <script src="/js/bootstrap.bundle.min.js"></script>
-    <script src="/js/validation.js"></script>
+    <script src="/js/confirm.js"></script>
     <script src="/js/storage.js"></script>
     <script src="/js/table.js"></script>
-    <script src="/js/ViewOrder.js"></script>
+    <script src="/js/view.js"></script>
 </body>
 </html>
