--- a/main.html
+++ b/main.html
@@ -14,7 +14,7 @@
         <div class="media">
             <div><a id='ghub' href="https://github.com/raysarigumba/edriven2020"><i  class="fa fa-github" aria-hidden="true"></i></a></div>
         </div>
-        <div class="button"><a href="/other.html"><button class="buttonn">JOIN</button></a></div>
+        <div class="button"><a href="/other.html"><button class="bttnn">JOIN</button></a></div>
     </div>
     
 </body>
